Closed
Bug 1151480
Opened 11 years ago
Closed 11 years ago
A web page using BroadcastChannel crashes the browser after navigating to it
Categories
(Firefox OS Graveyard :: General, defect)
Tracking
(firefox40 fixed)
RESOLVED
FIXED
2.2 S10 (17apr)
| Tracking | Status | |
|---|---|---|
| firefox40 | --- | fixed |
People
(Reporter: salva, Assigned: baku)
Details
Attachments
(1 file)
|
3.97 KB,
patch
|
ehsan.akhgari
:
review+
|
Details | Diff | Splinter Review |
STR:
1. Tap on the search bar
2. Navigate to http://lodr.github.io/bcc-crash
Expected:
The web loads properly.
Actual:
The web crashes and closes the browser.
| Reporter | ||
Comment 1•11 years ago
|
||
Hi Andrea
Do you know who is in charge of this part? I would plan to use broadcast to communicate the offliner worker [1] in order to enable updating capabilities on applications. Francisco's serviceworkerware [2] is using it as well.
[1] https://github.com/lodr/offliner/tree/concept
[2] https://github.com/arcturus/serviceworkerware
Flags: needinfo?(amarchesini)
| Assignee | ||
Comment 2•11 years ago
|
||
Tell me more. I cannot reproduce the crash.
Flags: needinfo?(amarchesini) → needinfo?(salva)
| Reporter | ||
Comment 3•11 years ago
|
||
Trying on the Flame device (Nightly seems to work and I did not try in b2g desktop), navigating to http://lodr.github.io/bcc-crash causes the browser to close.
Flags: needinfo?(salva)
| Reporter | ||
Updated•11 years ago
|
Flags: needinfo?(amarchesini)
| Assignee | ||
Comment 4•11 years ago
|
||
I cannot reproduce it with the current nightly. Can you tell me which version crashes? Can it be that his issue is already fixed?
Flags: needinfo?(amarchesini) → needinfo?(salva)
| Reporter | ||
Comment 5•11 years ago
|
||
Ups, you must load some custom prefs to Gaia:
user_pref('dom.caches.enabled', true);
user_pref('dom.serviceWorkers.enabled', true);
user_pref('dom.serviceWorkers.testing.enabled', true);
user_pref('network.disable.ipc.security', true);
Flags: needinfo?(salva)
| Assignee | ||
Updated•11 years ago
|
Assignee: nobody → amarchesini
| Assignee | ||
Comment 6•11 years ago
|
||
After the latest changed in BroadcastChannel API, for b2g we use the manifest URL as origin.
The problem is that the nsIPrincipal->CheckMayLoad() fails with such URI.
This patch compare the manifestURL with the origin if the principal has an appId.
Attachment #8589190 -
Flags: review?(ehsan)
Comment 7•11 years ago
|
||
Comment on attachment 8589190 [details] [diff] [review]
bc.patch
Review of attachment 8589190 [details] [diff] [review]:
-----------------------------------------------------------------
::: ipc/glue/BackgroundParentImpl.cpp
@@ +300,5 @@
> + mContentParent = nullptr;
> + }
> +
> + nsRefPtr<ContentParent>& mContentParent;
> + };
This is reimplementing AutoRestore. Please use that instead.
Attachment #8589190 -
Flags: review?(ehsan) → review+
| Assignee | ||
Comment 8•11 years ago
|
||
Comment 9•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
status-firefox40:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 2.2 S10 (17apr)
You need to log in
before you can comment on or make changes to this bug.
Description
•