Bug 1151480 - Correct check of the BroadcastChannel origin in b2g, r=ehsan